--- a/primeiro-formulario-lista/ex1.html
+++ b/primeiro-formulario-lista/ex1.html
@@ -7,16 +7,16 @@
     <title>Formulário</title>
 </head>
 <body>
-   <form action="form.php" method="POST">
+   <form action="ex1.php" method="post">
     <fieldset>
         <legend>Escolha uma operação</legend>
-        <input type="radio"name="somar">
+        <input type="radio"name="escolha" value="1">
         <label for="somar">Somar</label>
-        <input type="radio"  name="subtrair">
+        <input type="radio"  name="escolha" value="2">
         <label for="subtrair">Subtrair</label>
-        <input type="radio" name="dividir">
+        <input type="radio" name="escolha" value="3">
         <label for="dividir">Dividir</label>
-        <input type="radio" name="multiplicar">
+        <input type="radio" name="escolha" value="4">
         <label for="multiplicar">Multiplicar</label><br><br>
 
         <label for="n1">Primeiro número:</label>
